# aegis-pmx

./: INTEGRATION.md  PKGBUILD  README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py
sam/: __init__.py
sam/persona/: __init__.py  api.py  boundary_manager.py  core.py  memory_lensing.py  models.py  observability.py  service.py  state_engine.py  style_synthesis.py
systemd/: sam-pmx.service
tests/: __init__.py  test_affect_decay_and_events.py  test_boundary_policy_hints.py  test_core.py  test_style_mode_selection.py  test_traits_weights.py
